# humanizer

./: .gitignore  LICENSE  README.md  app.py  classifier.py  dataset.py  diffusion.py  generate.py  modules.py  pyproject.toml  train.py  train_classifier.py  train_multimodel_rlhf.py  train_rl_classifier.py
templates/: collect.html  index.html  leaderboard.html  rlhf.html
