[project]
name = "humanizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyobjc-framework-quartz>=12.1",
    "tk>=0.1.0",
    "torch>=2.9.1",
    "flask>=3.0.0",
    "tqdm>=4.67.1",
]
